Fixed the navigation bar styling and hopefully fixed the font size being too small on certain browsers.

--- a/shared/styles.css
+++ b/shared/styles.css
@@ -25,6 +25,7 @@
 
 body {
 	font-family: "Computer Modern";
+	font-size: 16px;
 	background-color: black;
 	color: white;
 	margin: 0px;
@@ -53,7 +54,7 @@ a:visited {
 
 #header_container {
 	text-align: center;
-	font-size: 2em;
+	font-size: 200%;
 	font-style: italic;
 	background-color: rgba(32, 32, 32, 0.5);
 	/*border-width: 1px;
@@ -96,7 +97,7 @@ a:visited {
 	text-decoration: inherit;
 	background-color: rgba(32, 32, 32, 0.5);
 	text-align: center;
-	font-size: 1.25em;
+	font-size: 125%;
 	font-weight: bold;
 	line-height: 64px;
 	height: 63px;
@@ -108,7 +109,7 @@ a:visited {
 #navigation_grid > div {
 	background-color: rgba(128, 0, 128, 0.25);
 	text-align: center;
-	font-size: 1.25em;
+	font-size: 125%;
 	font-weight: bold;
 	line-height: 64px;
 	height: 63px;
@@ -134,7 +135,7 @@ a:visited {
 }
 
 #content_title {
-	font-size: 2em;
+	font-size: 200%;
 	font-weight: bold;
 	text-align: center;
 	padding-top: 24px;
@@ -147,7 +148,7 @@ a:visited {
 }
 
 #content {
-	font-size: 1.25em;
+	font-size: 125%;
 	padding: 32px;
 }
 
@@ -200,13 +201,13 @@ a:visited {
 }
 
 .post_title {
-	font-size: 1.25em;
+	font-size: 125%;
 	font-weight: bold;
 	text-decoration: underline;
 }
 
 .post_description {
-	font-size: 1.25em;
+	font-size: 125%;
 }
 
 .post_tags {
@@ -250,6 +251,8 @@ a:visited {
 	}
 	
 	#navigation_grid {
+		border-left-style: none;
+		border-right-style: none;
 		width: 100vw;
 		float: none;
 	}
@@ -269,6 +272,8 @@ a:visited {
 	}
 	
 	#navigation_grid {
+		border-left-style: none;
+		border-right-style: none;
 		width: 100vw;
 		float: none;
 	}
